package NProto;

message THiliteMark
{
    optional bytes OpenTag = 1;
    optional bytes CloseTag = 2;
}

message TAttr
{
    optional bytes Name = 1;  //TString
    optional bytes Value = 2; //WideToUTF8(TUtf16String)
}

message TSpan
{
    optional uint32 Offset = 1; //in characters
    optional uint32 Len = 2;
    repeated TAttr Attrs = 3;
}

message TZone
{
    optional uint32 ZoneId = 1;
    repeated TSpan Spans = 2;
}

message TZonedString
{
    optional bytes String = 1; //UTF8 encoded string
    repeated TZone Zones = 2;  //Zones.Spans.Offset - characters in UTF8ToString(String)
}

